# sd-graph

./: .dockerignore  .env.ci  .env.example  .env.example.prod  .gitattributes  .gitignore  JATS-archivearticle1.dtd  README.md  SD-constraints.cql  SD-examples.cql  SD-processing.cql  SD-protein2gene.cql  SD-scripts.cql  build-sars-cov-2-sd-graph.sh  docker-compose.arm64.yml  docker-compose.ci.yml  docker-compose.deploy.yml  docker-compose.override.yml  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.tests.yml  docker-compose.yml  local.yml  notes.md  production.yml  pyproject.toml  requirements.txt  sdapi.py  sdneo.py  tests.py
api/: eeb-openapi.v2.yml
common/: logging.py
deploy/: cache_warmup  code  db
frontend/: .env  .env.production  .eslintrc.js  package-lock.json  package.json  vue.config.js
log/: info.log.1  info.log.10  info.log.2  info.log.3  info.log.4  info.log.5  info.log.6  info.log.7  info.log.8  info.log.9
neoflask/: README.md  __init__.py  cache.py  cache_warm_up.py  config.py  converter.py  engine.py  local.yml  queries.py  search.py  sitemap.py  test_converter.py  test_views.py  views.py  wsgi.py
neojats/: __init__.py  model.py  queries.py  xml2neo.py
neotools/: __init__.py  crossref-example.json  db.py  feature_flags.py  flow.py  model.py  published.py  purge_prelim.cql  queries.py  rxiv2neo.py  s3-commands.sh  test_txt2node.py  txt2node.py  utils.py  xml2neo.py
old vs new/: base.nodes.csv  base.relationships.csv  new-smtag-initial.nodes.csv  new-smtag-initial.relationships.csv  new-smtag.nodes.csv  new-smtag.relationships.csv  old-smtag.nodes.csv  old-smtag.relationships.csv
ontoneo/: __init__.py  model.py  queries.py  xml2neo.py
peerreview/: __init__.py  crossref-review.py  gpt.py  mecadoi.py  neohypo.py  notify.py  published.py  queries.py  summarization.py  test_mecadoi.py  test_notify.py  test_summarization.py
requirements/: base.txt  ci.txt  deploy.txt  production.txt
scripts/: lint.sh  (+1 more)
(+213 files in other folders)
