[project]
name = "sd-graph"
version = "0.1.0"
description = "Discover refereed preprints in the field of molecular biology."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "connexion[swagger-ui]<3.0.0",
    "flask>=2.2.5",
    "flask-caching>=2.3.1",
    "flask-cors>=6.0.1",
    "flask-dotenv>=0.1.2",
    "jinja2>=3.1.6",
    "lxml>=5.4.0",
    "neo4j>=5.28.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
    "werkzeug>=2.2.3",
]

[dependency-groups]
webserver = [
    "gunicorn>=23.0.0",
    "swagger-server",
]

[tool.uv.sources]
swagger-server = { path = "api/server" }
